--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,14 +1,17 @@
 /* Navbar Styling */
+/* Navbar Styling */
 .navbar {
-    background-color: #34495e; /* Darker background color for the navbar */
-    padding: 20px 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
+  background-color: #34495e; /* Darker background color for the navbar */
+  padding: 20px 10px;
+  position: fixed; /* Change sticky to fixed */
+  top: 70px;
+  width: 100%; /* Ensure the navbar spans the full width */
+  z-index: 1000; /* Ensure it stays above other elements */
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
+  border-radius: 0; /* Remove rounded corners for full-width navbar */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
   
   /* Navbar Background Color Change on Scroll */
   .navbar.scrolled {
@@ -285,3 +288,6 @@
   transform: scale(1.05);
   animation: bounce 0.3s ease-in-out;
 }
+
+
+
