--- a/src/pages/Vision&Mission/visionmission.css
+++ b/src/pages/Vision&Mission/visionmission.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 50px;
-  padding: 50px 20px;
+  height: 1400px;
+  padding: 120px 20px;
   background: linear-gradient(to bottom, #f5f7fa, #c3cfe2);
   animation: fadeIn 1s ease-in-out;
 }
