--- a/src/pages/Teams/WomenWings/womenwings.css
+++ b/src/pages/Teams/WomenWings/womenwings.css
@@ -3,7 +3,7 @@
     padding: 50px;
     background: linear-gradient(135deg, #a6f1a6, #2c3e50);
     text-align: center;
-    border-radius: 10px;
+    height: 1400px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   }
   
